Prevent project buttons from overlapping with content

--- a/styles.css
+++ b/styles.css
@@ -202,9 +202,9 @@ p + ul {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  bottom: 30px;
-  right: 30px;
-  gap: 0px;
+  bottom: 15px;
+  right: 15px;
+  gap: 2px;
 }
 
 .right-sidebar {
